--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,6 +16,11 @@ steps:
     args: ['apply', '-f', 'deployment.yaml']
 
   - name: 'gcr.io/cloud-builders/kubectl'
+    id: 'IMAGE_SERVICE'
+    env: [CLOUDSDK_CONTAINER_CLUSTER=faizan-k8s-gke, 'CLOUDSDK_COMPUTE_ZONE=us-central1']
+    args: ['apply', '-f', 'service.yaml']
+
+  - name: 'gcr.io/cloud-builders/kubectl'
     id: 'IMAGE_EXPOSE'
     env: [CLOUDSDK_CONTAINER_CLUSTER=faizan-k8s-gke, 'CLOUDSDK_COMPUTE_ZONE=us-central1']
     args: ['rollout', 'restart', 'deployment', 'image-2-deployment']
